--- a/config/klotz.conf
+++ b/config/klotz.conf
@@ -1,6 +1,9 @@
 # Uncomment these two line to add support for encoders to your firmware
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
-
+# led brightness settings
 CONFIG_ZMK_BACKLIGHT=y
 CONFIG_ZMK_BACKLIGHT_BRT_START=10
+
+# increase combo count per key for combo shifting
+CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=32
