--- a/config/klotz.conf
+++ b/config/klotz.conf
@@ -7,3 +7,5 @@ CONFIG_ZMK_BACKLIGHT_BRT_START=20
 
 # increase combo count per key for combo shifting
 CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=32
+
+CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
